# course-learning-companion

./: .env.example  .gitignore  Main_Page.py  README.md  pyproject.toml  run.py  streamlit_utils.py
infra/infra-airflow/: .env.example  Dockerfile  docker-compose.yaml
infra/infra-langfuse/: docker-compose.yaml  postgres-init.sql
infra/infra-llmlite/: .env.example  config.yaml  docker-compose.yaml
ingest_data/config/: airflow.cfg
ingest_data/dags/: ingest_chromadb.py  lecture_pipeline_dag.py  refine_report.py  transcript_API.py
pages/: 1_Chatbot.py  2_Summaries.py
reports/6OBtO9niT00/: 6OBtO9niT00_chunks.json  6OBtO9niT00_chunks.jsonl  6OBtO9niT00_lecture_summary.html  transcript_summary_6OBtO9niT00.json
reports/LPv1KfUXLCo/: LPv1KfUXLCo_chunks.json  LPv1KfUXLCo_chunks.jsonl  LPv1KfUXLCo_lecture_summary.html  transcript_summary_LPv1KfUXLCo.json
reports/SQ3fZ1sAqXI/: SQ3fZ1sAqXI_chunks.json  SQ3fZ1sAqXI_chunks.jsonl  SQ3fZ1sAqXI_lecture_summary.html  transcript_summary_SQ3fZ1sAqXI.json
reports/msHyYioAyNE/: msHyYioAyNE_chunks.json  msHyYioAyNE_chunks.jsonl  msHyYioAyNE_lecture_summary.html  transcript_summary_msHyYioAyNE.json
reports/ptFiH_bHnJw/: ptFiH_bHnJw_chunks.json  ptFiH_bHnJw_chunks.jsonl  ptFiH_bHnJw_lecture_summary.html  transcript_summary_ptFiH_bHnJw.json
src/: main.py  settings.py
src/dependencies/: agents.py  users.py
src/rails/: actions.py  config.yml  disallowed_topics.co  prompts.yml
test/: run_inference.py  test_agents.py  test_hybrid_search.py  test_semantic_cache.py
transcript/: transcript_summary_ptFiH_bHnJw.json
(+19 files in other folders)
